cambiando form final

--- a/index.html
+++ b/index.html
@@ -92,6 +92,25 @@
         <input type="text" placeholder="Nombre" id="nombre" v-model="nombre">
         <input type="email" placeholder="Email" id="email" v-model="email">
         <button @click="setLocalStorageUser()" class="register__btn">Guardar</button>
+
+        <!-- <div class="login-box">
+ 
+          <form>
+            <div class="user-box">
+              <input type="text" name="" id="nombre" v-model="nombre">
+              <label>Nombre</label>
+            </div>
+            <div class="user-box">
+              <input type="email" name="" id="email" v-model="email">
+              <label>Email</label>
+            </div><center>
+            <a @click="setLocalStorageUser()">
+                   GUARDAR
+               <span></span>
+            </a></center>
+          </form>
+        </div> -->
+
       </div>
     </div>
   </div>
